gitops/flux-capacitor/ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-capacitor
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-cloudflare-dns
spec:
  tls:
  - hosts:
    - flux.buc.sh
    secretName: cert-flux-buc-sh
  rules:
  - host: flux.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: capacitor
            port:
              number: 9000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-capacitor-http
  namespace: flux-system
spec:
  rules:
  - host: flux.10.0.0.16.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: capacitor
            port:
              number: 9000

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-to-capacitor
  namespace: flux-system
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
  policyTypes:
    - Ingress
